[package]
name = "ufloat"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Wrappers around floating point numbers with ufmt trait implementations"
repository = "https://github.com/LiamGallagher737/ufloat"
readme = "README.md"
categories = ["no-std", "no-std::no-alloc", "embedded"]
keywords = ["no_std", "ufmt", "float"]
authors = ["Liam Gallagher <liam@liamgallagher.dev>"]
exclude = [".github"]

[dependencies]
ufmt = "0.2.0"
libm = "0.2.0"
